err/jlddk.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/jlddk'...
Compiling './lib/python3.5/site-packages/jlddk/BeautifulSoup.py'...
***   File "./lib/python3.5/site-packages/jlddk/BeautifulSoup.py", line 448
    raise AttributeError, "'%s' object has no attribute '%s'" % (self.__class__.__name__, attr)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jlddk/agents'...
Compiling './lib/python3.5/site-packages/jlddk/agents/test2.py'...
***   File "./lib/python3.5/site-packages/jlddk/agents/test2.py", line 9
    print "test2.init", p
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jlddk/block'...
Compiling './lib/python3.5/site-packages/jlddk/script_arun.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_arun.py", line 26
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_cat.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_cat.py", line 70
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_comp.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_comp.py", line 189
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_dirzip.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_dirzip.py", line 54
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_fcomp.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_fcomp.py", line 59
    print "%s%s" % (prefix, item)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_filter.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_filter.py", line 23
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_jsoncat.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_jsoncat.py", line 104
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_run.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_run.py", line 34
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_splitter.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_splitter.py", line 127
    except ExpWarning,e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_strpkg.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_strpkg.py", line 42
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_uncat.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_uncat.py", line 47
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/script_webdl.py'...
***   File "./lib/python3.5/site-packages/jlddk/script_webdl.py", line 86
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/tools_flow.py'...
***   File "./lib/python3.5/site-packages/jlddk/tools_flow.py", line 48
    def _processor((nxt, run)):
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/tools_logging.py'...
***   File "./lib/python3.5/site-packages/jlddk/tools_logging.py", line 59
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/tools_misc.py'...
***   File "./lib/python3.5/site-packages/jlddk/tools_misc.py", line 12
    print p
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jlddk/tools_os.py'...
***   File "./lib/python3.5/site-packages/jlddk/tools_os.py", line 37
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jlddk/tools_sys.py'...
***   File "./lib/python3.5/site-packages/jlddk/tools_sys.py", line 51
    print pargs, kargs
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jlddk/tools_web.py'...
***   File "./lib/python3.5/site-packages/jlddk/tools_web.py", line 64
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jlddk/utils'...
Compiling './lib/python3.5/site-packages/jlddk/utils/debug.py'...
***   File "./lib/python3.5/site-packages/jlddk/utils/debug.py", line 8
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jlddk-0.7.37.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pyfnc'...
Listing './lib/python3.5/site-packages/pyfnc/examples'...
Compiling './lib/python3.5/site-packages/pyfnc/examples/ex1.py'...
***   File "./lib/python3.5/site-packages/pyfnc/examples/ex1.py", line 30
    print greet("male", "Dupont")
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyfnc/tests'...
Listing './lib/python3.5/site-packages/pyfnc-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pyinotify-0.9.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
